Релиз, финальный пет проект.